# File-Manager-Agent

./: README.md  __init__.py  agent.py  main.py
FileManagerAgent/: chat.md  pyproject.toml  test.py
FileManagerAgent/src/filemanageragent/: Procfile
filemanageragent/: Procfile  requirements.txt
