[project]
name = "filemanageragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.8.4",
    "openai-agents>=0.5.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
filemanageragent = "filemanageragent:main"
main="filemanageragent.agent:main"


[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
